<resources>
    <string name="app_name">TeamTalk 5</string>
    <string name="title_activity_server_list">TeamTalk 5 Servers</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_server_entry">TeamTalk 5 Server Properties</string>
    <string name="title_activity_main">TeamTalk 5 for Android</string>
    <string name="title_section_channels">Channels</string>
    <string name="title_section_chat">Chat</string>
    <string name="title_section_media">Media Streams</string>
    <string name="title_section_files">Files</string>
    <string name="title_activity_channel_prop">Channel Properties</string>
    <string name="title_activity_user_prop">User Properties</string>
    <string name="title_activity_text_message">Text Message</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="action_createchannel">Create</string>
    <string name="action_updatechannel">Update</string>
    <string name="text_con_failed">Failed to connect to server. Retrying...</string>
    <string name="text_con_lost">Lost connection to server</string>
    <string name="text_con_success">Connected to server</string>
    <string name="text_con_cmderr">Failed to issue command</string>
    <string name="text_cmderr_login">Failed to issue login command</string>
    <string name="text_cmd_loggedin">Logged on to server</string>
    <string name="text_cmd_joinchan">Joined channel:</string>
    <string name="text_cmd_leftchan">Left channel:</string>
    <string name="text_cmd_joinroot">Joined root channel</string>
    <string name="text_cmd_leftroot">Left root channel</string>
    <string name="text_cmd_userjoinchan">joined channel</string>
    <string name="text_cmd_userleftchan">left channel</string>
    <string name="text_cmd_servername">Server name: </string>
    <string name="text_cmd_servermotd">Message of the day: </string>
    <string name="pref_cat_subscriptions">Subscriptions</string>
    <string name="pref_cat_tts">Configure Text to Speech messages</string>
    <string name="pref_cat_soundtest">Sound Test</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_nickname">Nickname</string>
    <string name="pref_default_nickname">Noname</string>
    <string name="pref_title_keep_screen_on">Keep screen on when connected</string>
    <string name="pref_title_voice_act">Voice Activation</string>
    <string name="pref_title_vibrate">Vibrate on PTT</string>
    <string name="pref_show_log_messages">Show log messages in chat history</string>
    <string name="pref_title_audio_icons">Sound Events</string>
    <string name="pref_title_rx_tx_audio_icon">Voice transmission toggle</string>
    <string name="pref_summary_rx_tx_audio_icon">Play sound when TX button is pressed</string>
    <string name="pref_title_personal_message_audio_icon">Private message</string>
    <string name="pref_summary_personal_message_audio_icon">Play sound when private message is received</string>
    <string name="pref_title_channel_message_audio_icon">Channel message</string>
    <string name="pref_summary_channel_message_audio_icon">Play sound when channel message is received</string>
    <string name="pref_title_broadcast_message_audio_icon">Broadcast message</string>
    <string name="pref_summary_broadcast_message_audio_icon">Play sound when broadcast message is received</string>
    <string name="pref_title_server_lost_audio_icon">Server connection lost</string>
    <string name="pref_summary_server_lost_audio_icon">Play sound when connection is dropped</string>
    <string name="pref_title_files_update_audio_icon">File list updated</string>
    <string name="pref_summary_files_update_audio_icon">Play sound when files are added or removed</string>
    <string name="pref_header_connection">Connection</string>
    <string name="pref_title_sub_txtmsg">Text Messages</string>
    <string name="pref_summary_sub_txtmsg">Subscribe to text messages from users</string>
    <string name="pref_title_sub_chanmsg">Channel Messages</string>
    <string name="pref_summary_sub_chanmsg">Subscribe to channel text messages</string>
    <string name="pref_title_sub_bcastmsg">Broadcast Messages</string>
    <string name="pref_summary_sub_bcastmsg">Subscribe to broadcast text messages</string>
    <string name="pref_title_sub_voice">Voice</string>
    <string name="pref_summary_sub_voice">Subscribe to voice streams</string>
    <string name="pref_title_sub_video">Video Capture</string>
    <string name="pref_summary_sub_video">Subscribe to video capture streams</string>
    <string name="pref_title_sub_desktop">Desktop</string>
    <string name="pref_summary_sub_desktop">Subscribe to desktop streams</string>
    <string name="pref_title_sub_mediafile">Media File</string>
    <string name="pref_summary_sub_mediafile">Subscribe to media file streams</string>
    <string name="pref_header_tts">Text to Speech</string>
    <string name="pref_title_server_login">User logs on the server</string>
    <string name="pref_summary_server_login">Announce name of user logging in</string>
    <string name="pref_title_server_logout">User logs out of the server</string>
    <string name="pref_summary_server_logout">Announce name of user logging out</string>
    <string name="pref_title_channel_join">User joins the channel</string>
    <string name="pref_summary_channel_join">Announce name of the user joining the channel</string>
    <string name="pref_title_channel_leave">User leaves the channel</string>
    <string name="pref_summary_channel_leave">Announce name of the user leaving the channel</string>
    <string name="pref_title_personal_message">Personal messages</string>
    <string name="pref_title_broadcast_message">Broadcast messages</string>
    <string name="pref_summary_message">Announce name of the sender</string>
    <string name="pref_title_mute_speakers">Mute speakers when pressing TX button</string>
    <string name="pref_summary_mute_speakers">Enable this to avoid echo from speakers</string>
    <string name="pref_title_show_usernames">Show usernames</string>
    <string name="pref_summary_show_usernames">Show usernames instead of nicknames</string>
    <string name="pref_title_mediafile_volume">Media file volume</string>
    <string name="pref_summary_mediafile_volume">Media file vs. voice volume</string>
    <string name="text_tts_loggedin">has logged in</string>
    <string name="text_tts_loggedout">has logged out</string>
    <string name="text_tts_joined_chan">has joined the channel</string>
    <string name="text_tts_left_chan">has left the channel</string>
    <string name="text_tts_personal_message">Personal message from user %1$s</string>
    <string name="text_tts_broadcast_message">Broadcast message from user %1$s</string>
    <string name="pref_header_soundsystem">Sound System</string>
    <string name="title_activity_audio_codec">Audio Codec</string>
    <string name="title_activity_filepicker">File Selection</string>
    <string name="title_section_opus">OPUS</string>
    <string name="title_section_speex">Speex</string>
    <string name="title_section_speexvbr">Speex VBR</string>
    <string name="title_section_noaudio">No Audio</string>
    <string name="opus_application">Application</string>
    <string name="button_tx">TX</string>
    <string name="button_remove">Remove</string>
    <string name="button_edit">Edit</string>
    <string name="action_ban">Ban</string>
    <string name="action_edit">Edit Channel</string>
    <string name="action_join">Join</string>
    <string name="action_kick">Kick</string>
    <string name="action_move">Move</string>
    <string name="action_upload">Upload File</string>
    <string name="button_msg">Msg</string>
    <string name="button_send">Send</string>
    <string name="channel_prop_title_name">Name</string>
    <string name="channel_prop_title_topic">Topic</string>
    <string name="channel_prop_title_password">Password</string>
    <string name="channel_prop_title_op_password">Op Password</string>
    <string name="channel_prop_title_maxusers">Max Users</string>
    <string name="channel_prop_title_diskquota">Disk Quota (KBytes)</string>
    <string name="channel_prop_title_permanent">Permanent Channel</string>
    <string name="channel_prop_title_nointerrupt">No interruptions</string>
    <string name="channel_prop_title_classroom">Classroom</string>
    <string name="channel_prop_title_oprecvonly">Operator Receives Only</string>
    <string name="channel_prop_title_novoiceact">No Voice Activation</string>
    <string name="channel_prop_title_noaudiorecord">No Audio Recording</string>
    <string name="user_prop_title_username">Username</string>
    <string name="user_prop_title_clientname">Client Name</string>
    <string name="user_prop_title_voice_volume">Voice Volume</string>
    <string name="user_prop_title_mute_voice">Mute Voice</string>
    <string name="user_prop_title_media_volume">Media File Volume</string>
    <string name="user_prop_title_mute_media">Mute Media File</string>
    <string name="label_connection">Connection:</string>
    <string name="stat_online">Online</string>
    <string name="stat_offline">Offline</string>
    <string name="stat_connecting">Connecting</string>
    <string name="label_voice">Voice:</string>
    <string name="label_desktop">Desktop:</string>
    <string name="label_ping">Ping:</string>
    <string name="label_rxtx">RX/TX:</string>
    <string name="label_total">Total:</string>
    <string name="label_mediafile">Media File:</string>
    <string name="default_">Default</string>
    <string name="server_list_empty">TeamTalk 5 Server List is empty</string>
    <string name="no_nickname">No Nickname</string>
    <string name="message_text">Message Text</string>
    <string name="time_date">Time Date</string>
    <string name="name">Name</string>
    <string name="err_init_sound_input">Failed to initialize sound input device</string>
    <string name="err_init_sound_output">Failed to initialize sound output device</string>
    <string name="err_retrieve_public_server_list">Failed to retrieve public server list</string>
    <string name="err_send_text_message">Failed to send text message</string>
    <string name="err_connection">Connection failed</string>
    <string name="action_new_channel">New Channel</string>
    <string name="action_save">Save</string>
    <string name="action_connect">Connect</string>
    <string name="action_new_server">New Server</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_import_serverlist">Import from File</string>
    <string name="pref_title_server_props">TeamTalk 5 Server Properties</string>
    <string name="pref_title_server_info">Server Information</string>
    <string name="pref_title_server_name">Server Name</string>
    <string name="pref_title_server_address">Domain Name or IP-address</string>
    <string name="pref_title_tcp_port">TCP Port</string>
    <string name="pref_title_udp_port">UDP Port</string>
    <string name="pref_title_encription">Encrypted</string>
    <string name="pref_title_authentication">Authentication</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_title_join_channel">Join Channel</string>
    <string name="pref_title_channel">Channel</string>
    <string name="pref_title_channel_password">Channel Password</string>
    <string name="pref_title_last_channel">Last Joined Channel</string>
    <string name="pref_summary_server_name">This server will appear with this name in the Server List</string>
    <string name="pref_summary_server_address">The domain name or IP-address of the server</string>
    <string name="channel_password_prompt">Enter channel password</string>
    <string name="button_download">Download</string>
</resources>