<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="dk.bearware.gui.PreferencesActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" />
    <header
        android:fragment="dk.bearware.gui.PreferencesActivity$SoundEventsPreferenceFragment"
        android:title="@string/pref_header_soundevents" />
    <header
        android:fragment="dk.bearware.gui.PreferencesActivity$TtsPreferenceFragment"
        android:title="@string/pref_header_tts" />
    <header
        android:fragment="dk.bearware.gui.PreferencesActivity$ConnectionPreferenceFragment"
        android:title="@string/pref_header_connection" />
    <header
        android:fragment="dk.bearware.gui.PreferencesActivity$SoundSystemPreferenceFragment"
        android:title="@string/pref_header_soundsystem" />
    
</preference-headers>
