<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChannelPropActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/channamelabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_name" />

        <EditText
            android:id="@+id/channame"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/chantopiclabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_topic" />

        <EditText
            android:id="@+id/chantopic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:lines="3" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/chanpasswdlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_password"
            />

        <EditText
            android:id="@+id/chanpasswd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1" >
        </EditText>
    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/chanoppasswdlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_op_password"
            />

        <EditText
            android:id="@+id/chanoppasswd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1" >
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/chan_permanent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_permanent" />

        <CheckBox
            android:id="@+id/chan_nointerrupt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_prop_title_nointerrupt" />
        
        </LinearLayout>

</LinearLayout>
